# sbsbz

./: .gitignore  CLAUDE.md  README.md  bm.sbsbz.code-workspace  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
automation/prompts/: sunday_weekly_blast.md  thursday_bachata.md  wednesday_zouk.md
client/: index.html
client/public/__manus__/: version.json
client/src/: App.tsx  index.css
client/src/components/: Footer.tsx  Navbar.tsx
client/src/pages/: About.tsx  Classes.tsx  Events.tsx  Home.tsx  Join.tsx
experiments/00_automating_marketing/: readme.md  weekly_marketing_prompt_3_31_2026.md
py_src/: SETUP.md  pyproject.toml  recipients.json  recipients_bachata_list.json  send_weekly_email.py
